unpackaged/main/default/objects/Case/fields/Satisfaction_globale_Int__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_globale_Int__c</fullName>
    <formula>VALUE(text(Note_Globale_Value__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Satisfaction globale (Int)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>