unpackaged/main/default/objects/Case/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <description>Calcul de SLA selon la durée de la requête</description>
    <formula>if 
(
Duree_de_la_requete__c &lt;=60

,
 $Label.Case_SLA
,
if(AND(Duree_de_la_requete__c&gt;61,Duree_de_la_requete__c&lt;120), $Label.Case_SLA_Moyen	
,
if(Duree_de_la_requete__c&gt;=120,$Label.Case_SLA_Mauvais,


&#39;N/A&#39;
)


)


)</formula>
    <label>SLA</label>
    <type>Text</type>
</CustomField>