unpackaged/main/default/objects/Case/fields/SMS_Sent__c.field-meta.xml
<CustomField>
    <fullName>SMS_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sms de notification client envoyé si true</description>
    <label>SMS Envoyé</label>
    <type>Checkbox</type>
</CustomField>