unpackaged/main/default/objects/Case/fields/TECH_AG__c.field-meta.xml
<CustomField>
    <fullName>TECH_AG__c</fullName>
    <description>Tag true la liste agences utilisateur contient l&#39;agence intervenante ou l&#39;agence propriétaire de la requête</description>
    <formula>IF 
( 
OR
(
   AND(
       OR(Contains( $User.Liste_Agences__c ,Agence_Intervenante__r.Name),($User.Liste_Agences__c = Agence_Intervenante__r.Name ))
       ,
       NOT(ISBLANK(Agence_Intervenante__c))
       )
,  AND(
     Contains( $User.Liste_Agences__c , Agence_compte__c ),
     NOT(ISBLANK(Agence_compte__c )))
) 
, 
TRUE 
, 
FALSE 
)</formula>
    <label>TECH_AG</label>
    <type>Checkbox</type>
</CustomField>