unpackaged/main/default/objects/Case/fields/TECH_Agence_intervenante__c.field-meta.xml
<CustomField>
    <fullName>TECH_Agence_intervenante__c</fullName>
    <formula>Agence_Intervenante__r.Name</formula>
    <label>TECH_Agence_intervenante</label>
    <type>Text</type>
</CustomField>