unpackaged/main/default/objects/Case/fields/TECH_AgenceIntervenante_Libelle__c.field-meta.xml
<CustomField>
    <fullName>TECH_AgenceIntervenante_Libelle__c</fullName>
    <formula>Agence_Intervenante__r.Libelle__c</formula>
    <label>TECH_AgenceIntervenante_Libelle</label>
    <type>Text</type>
</CustomField>