unpackaged/main/default/objects/Case/fields/TECH_AgenceIntervenante_Tel__c.field-meta.xml
<CustomField>
    <fullName>TECH_AgenceIntervenante_Tel__c</fullName>
    <formula>Agence_Intervenante__r.phone_Agence__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_AgenceIntervenante_Tel</label>
    <type>Text</type>
</CustomField>