unpackaged/main/default/objects/Case/fields/TECH_DATE__c.field-meta.xml
<CustomField>
    <fullName>TECH_DATE__c</fullName>
    <description>Champ pour Workflow de clôture de requête automatique</description>
    <label>TECH_DATE</label>
    <type>Date</type>
</CustomField>