unpackaged/main/default/objects/Case/fields/TECH_Email_Agence__c.field-meta.xml
<CustomField>
    <fullName>TECH_Email_Agence__c</fullName>
    <description>Email agence intervenante</description>
    <label>TECH_Email_Agence</label>
    <type>Email</type>
</CustomField>