unpackaged/main/default/objects/Case/fields/TECH_ID_Ultimate_Account__c.field-meta.xml
<CustomField>
    <fullName>TECH_ID_Ultimate_Account__c</fullName>
    <description>L&#39;id de l&#39;ultimate account du compte associé avec la requête</description>
    <formula>Account.UltimateAccount__r.Id</formula>
    <label>TECH_ID_Ultimate_Account</label>
    <type>Text</type>
</CustomField>