unpackaged/main/default/objects/Case/fields/TECH_Intervention_Nuit__c.field-meta.xml
<CustomField>
    <fullName>TECH_Intervention_Nuit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Déclarer la requête comme intervention de nuit manuellement</description>
    <label>TECH_Intervention_Nuit</label>
    <type>Checkbox</type>
</CustomField>