unpackaged/main/default/objects/Case/fields/TECH_Mission_Lien__c.field-meta.xml
<CustomField>
    <fullName>TECH_Mission_Lien__c</fullName>
    <description>Lien vers la mission 000001</description>
    <formula>IF(
NOT(ISBLANK(TECH_Mission_ID__c))
,
LEFT($Api.Partner_Server_URL_340, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_340)) &amp;  TECH_Mission_ID__c 
,
LEFT($Api.Partner_Server_URL_340, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_340))
)</formula>
    <label>TECH_Mission_Lien</label>
    <type>Text</type>
</CustomField>