unpackaged/main/default/objects/Case/fields/TECH_NotifCommunityCaseSent__c.field-meta.xml
<CustomField>
    <fullName>TECH_NotifCommunityCaseSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Coché si la notification &quot;création d&#39;une requête community&#39; est envoyée à l&#39;agence intervenante.</description>
    <label>TECH_NotifCommunityCaseSent</label>
    <type>Checkbox</type>
</CustomField>