unpackaged/main/default/objects/Case/fields/TECH_Notification_sent__c.field-meta.xml
<CustomField>
    <fullName>TECH_Notification_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>coché automatiquement quand une notification est envoyé depuis la requête
PB MOON_10_Notifications_Case</description>
    <label>TECH_Notification_sent</label>
    <type>Checkbox</type>
</CustomField>