unpackaged/main/default/objects/Case/fields/TECH_ONE__c.field-meta.xml
<CustomField>
    <fullName>TECH_ONE__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_ONE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>