unpackaged/main/default/objects/Case/fields/TELE_Location_Latitude__c.field-meta.xml
<CustomField>
    <fullName>TELE_Location_Latitude__c</fullName>
    <label>TELE_Location_Latitude</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>