unpackaged/main/default/objects/Case/fields/Type_de_marchandise__c.field-meta.xml
<CustomField>
    <fullName>Type_de_marchandise__c</fullName>
    <label>Type de marchandise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frais</fullName>
            </value>
            <value>
                <fullName>Surgelé</fullName>
            </value>
            <value>
                <fullName>Frais &amp; Surgelé</fullName>
            </value>
            <value>
                <fullName>Sec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>