unpackaged/main/default/objects/Case/fields/Type_Demande_Service_Flux__c.field-meta.xml
<CustomField>
    <fullName>Type_Demande_Service_Flux__c</fullName>
    <label>Type_Demande_Service_Flux</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gestion du portail</fullName>
            </value>
            <value>
                <fullName>Demande de service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>