unpackaged/main/default/objects/Case/fields/Type_enregistrement_requete__c.field-meta.xml
<CustomField>
    <fullName>Type_enregistrement_requete__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type d&#39;enregistrement de la requête</label>
    <type>Text</type>
</CustomField>