unpackaged/main/default/objects/Case/fields/Unique_Flow_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Flow_Identifier__c</fullName>
    <description>identifiant attribué à l’enregistrent lors de la création via le flux de création en Background.Cet identifiant permet de rediriger vers l&#39;enregistrement une fois crée.</description>
    <label>Unique Flow Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>