unpackaged/main/default/objects/Case/fields/Vandalisme__c.field-meta.xml
<CustomField>
    <fullName>Vandalisme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vandalisme</label>
    <type>Checkbox</type>
</CustomField>