unpackaged/main/default/objects/Case/fields/Vehicule_immobilis__c.field-meta.xml
<CustomField>
    <fullName>Vehicule_immobilis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Véhicule immobilisé</label>
    <type>Checkbox</type>
</CustomField>