unpackaged/main/default/objects/Case/recordTypes/Depannage_Container.recordType-meta.xml
<RecordType>
    <fullName>Depannage_Container</fullName>
    <active>true</active>
    <businessProcess>Dépannage</businessProcess>
    <label>Dépannage - Container</label>
</RecordType>