unpackaged/main/default/objects/Case/recordTypes/Depannage_Vehicule.recordType-meta.xml
<RecordType>
    <fullName>Depannage_Vehicule</fullName>
    <active>true</active>
    <businessProcess>Dépannage</businessProcess>
    <label>Dépannage - véhicule</label>
</RecordType>