unpackaged/main/default/objects/Case/recordTypes/Gestion_du_portail.recordType-meta.xml
<RecordType>
    <fullName>Gestion_du_portail</fullName>
    <active>true</active>
    <businessProcess>Dépannage</businessProcess>
    <label>Gestion du portail</label>
</RecordType>