unpackaged/main/default/objects/Case/validationRules/VR_Case_StatutLectureSeule_Community.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Case_StatutLectureSeule_Community</fullName>
    <active>true</active>
    <description>interdire la modification du statut par un utilisateur community</description>
    <errorConditionFormula>AND
(
OR(ISCHANGED( Status ),ISCHANGED(RecordTypeId))
,
 OR(
$User.ProfileId = $Label.USR_ProfileId_PFCommunityPlusUltimateAccount ,
$User.ProfileId = $Label.USR_ProfileId_PFCommunityPlusSiteAccount ,
$User.ProfileId = $Label.USR_ProfileId_PFCommunityPlusClientAccount)
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>La requête ne peut être modifié que par Petit Forestier</errorMessage>
</ValidationRule>