unpackaged/main/default/objects/Case/listViews/Community_D_pannages_termin_s.listView-meta.xml
<ListView>
    <fullName>Community_D_pannages_termin_s</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Terminee</value>
    </filters>
    <filters>
        <field>CASES.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2020 12:00 AM</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Depannage_Container,Case.Depannage_Vehicule</value>
    </filters>
    <label>Community - Dépannages terminés</label>
    <sharedTo>
        <group>Utilisateurs_Portail_Client_FR</group>
    </sharedTo>
</ListView>