unpackaged/main/default/objects/Case/listViews/Community_Demandes_de_service_Termin_s.listView-meta.xml
<ListView>
    <fullName>Community_Demandes_de_service_Termin_s</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Statut__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>Agence_proprietaire__c</columns>
    <columns>Agence_Intervenante__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Demande_de_service</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Terminee</value>
    </filters>
    <label>Community-Demandes de service terminées</label>
    <sharedTo>
        <group>Utilisateurs_Portail_Client_FR</group>
    </sharedTo>
</ListView>