unpackaged/main/default/objects/Case/listViews/Community_Demandes_de_services_en_cours.listView-meta.xml
<ListView>
    <fullName>Community_Demandes_de_services_en_cours</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Statut__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>Agence_proprietaire__c</columns>
    <columns>Agence_Intervenante__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Demande_de_service</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Nouvelle,En_Cours</value>
    </filters>
    <label>Community-Demandes de services en cours</label>
    <sharedTo>
        <group>Utilisateurs_Portail_Client_FR</group>
    </sharedTo>
</ListView>