unpackaged/main/default/objects/Case/listViews/Community_Fehlerbehebung_abgeschlossen.listView-meta.xml
<ListView>
    <fullName>Community_Fehlerbehebung_abgeschlossen</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Community – Fehlerbehebung abgeschlossen</label>
    <sharedTo>
        <group>Utilisateurs_Portail_Client_DE</group>
    </sharedTo>
</ListView>