unpackaged/main/default/objects/Case/listViews/Community_Gest_o_do_portal_conclu_da.listView-meta.xml
<ListView>
    <fullName>Community_Gest_o_do_portal_conclu_da</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Gestion_du_portail</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Terminee</value>
    </filters>
    <label>Community - Gestão do portal concluída</label>
    <sharedTo>
        <group>Utilisateurs_Portail_Client_PT</group>
    </sharedTo>
</ListView>