unpackaged/main/default/objects/Case/listViews/Community_Gesti_n_del_portal_en_curso.listView-meta.xml
<ListView>
    <fullName>Community_Gesti_n_del_portal_en_curso</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Gestion_du_portail</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Nouvelle,En_Cours</value>
    </filters>
    <label>Community-Gestión del portal en curso</label>
    <sharedTo>
        <group>Utilisateurs_Portail_Client_ES</group>
    </sharedTo>
</ListView>